Fix overflow-x to bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,6 @@
 body {
   color: white;
   background: black;
-  overflow-x: hidden;
 }
 
 /* SCROLLBAR PRESETS */
